--- a/deploy/olm-catalog/manifests/assisted-service-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/manifests/assisted-service-operator.clusterserviceversion.yaml
@@ -529,17 +529,9 @@ spec:
           - ""
           resources:
           - configmaps
-          - persistentvolumeclaims
-          - secrets
-          - serviceaccounts
-          - services
           verbs:
-          - create
-          - delete
           - get
           - list
-          - patch
-          - update
           - watch
         - apiGroups:
           - ""
@@ -558,9 +550,42 @@ spec:
           - list
           - watch
         - apiGroups:
+          - ""
+          resources:
+          - secrets
+          verbs:
+          - create
+          - get
+          - list
+          - update
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - serviceaccounts
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
           - admissionregistration.k8s.io
           resources:
           - mutatingwebhookconfigurations
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - admissionregistration.k8s.io
+          resources:
           - validatingwebhookconfigurations
           verbs:
           - create
@@ -574,10 +599,6 @@ spec:
           - agent-install.openshift.io
           resources:
           - agentclassifications
-          - agents
-          - agentserviceconfigs
-          - hypershiftagentserviceconfigs
-          - infraenvs
           verbs:
           - create
           - delete
@@ -590,18 +611,109 @@ spec:
           - agent-install.openshift.io
           resources:
           - agentclassifications/finalizers
-          - agents/ai-deprovision
-          - agentserviceconfigs/finalizers
-          - hypershiftagentserviceconfigs/finalizers
           verbs:
           - update
         - apiGroups:
           - agent-install.openshift.io
           resources:
           - agentclassifications/status
+          verbs:
+          - get
+          - patch
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - agents
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - agents/ai-deprovision
+          verbs:
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
           - agents/status
+          verbs:
+          - get
+          - patch
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - agentserviceconfigs
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - agentserviceconfigs/finalizers
+          verbs:
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
           - agentserviceconfigs/status
+          verbs:
+          - get
+          - patch
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - hypershiftagentserviceconfigs
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - hypershiftagentserviceconfigs/finalizers
+          verbs:
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
           - hypershiftagentserviceconfigs/status
+          verbs:
+          - get
+          - patch
+          - update
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
+          - infraenvs
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - agent-install.openshift.io
+          resources:
           - infraenvs/status
           verbs:
           - get
@@ -639,6 +751,17 @@ spec:
           - apps
           resources:
           - deployments
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - apps
+          resources:
           - statefulsets
           verbs:
           - create
@@ -658,6 +781,17 @@ spec:
           - cert-manager.io
           resources:
           - certificates
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - cert-manager.io
+          resources:
           - issuers
           verbs:
           - create
@@ -685,9 +819,37 @@ spec:
           - config.openshift.io
           resources:
           - clusteroperators
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - config.openshift.io
+          resources:
           - clusterversions
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - config.openshift.io
+          resources:
           - dnses
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - config.openshift.io
+          resources:
           - infrastructures
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - config.openshift.io
+          resources:
           - proxies
           verbs:
           - get
@@ -697,6 +859,66 @@ spec:
           - coordination.k8s.io
           resources:
           - leases
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - configmaps
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - persistentvolumeclaims
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - secrets
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - serviceaccounts
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - ""
+          resources:
+          - services
           verbs:
           - create
           - delete
@@ -830,8 +1052,41 @@ spec:
           - rbac.authorization.k8s.io
           resources:
           - clusterrolebindings
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - rbac.authorization.k8s.io
+          resources:
           - clusterroles
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - rbac.authorization.k8s.io
+          resources:
           - rolebindings
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - rbac.authorization.k8s.io
+          resources:
           - roles
           verbs:
           - create
@@ -845,6 +1100,17 @@ spec:
           - route.openshift.io
           resources:
           - routes
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        - apiGroups:
+          - route.openshift.io
+          resources:
           - routes/custom-host
           verbs:
           - create
