MGMT-22812: Threat model finding: Hardcoded AWS credentials in source code
Co-authored-by: Zoltan Szabo <zszabo@redhat.com>

--- a/deploy/s3/secret.yaml
+++ b/deploy/s3/secret.yaml
@@ -7,8 +7,10 @@ metadata:
     app: object-store
 type: Opaque
 stringData:
-  aws_access_key_id: "accessKey1"
+  # IMPORTANT: Replace these placeholder values with actual credentials
+  # DO NOT commit real credentials to version control
+  aws_access_key_id: "REPLACE_WITH_ACCESS_KEY"
   aws_region: "us-east-1"
-  aws_secret_access_key: "verySecretKey1"
+  aws_secret_access_key: "REPLACE_WITH_SECRET_KEY"
   bucket: "test"
   endpoint: "http://object-store:9000"
