--- a/renovate.json
+++ b/renovate.json
@@ -76,6 +76,28 @@
             ],
             "depNameTemplate": "registry.access.redhat.com/ubi8/go-toolset",
             "datasourceTemplate": "docker"
+        },
+        {
+            "customType": "regex",
+            "managerFilePatterns": [
+                "/^Dockerfile\\.assisted-service.*$/"
+            ],
+            "matchStrings": [
+                "FROM registry.access.redhat.com/ubi9/ubi:(?<currentValue>[^@]+)@(?<currentDigest>sha256:[a-f0-9]+) AS builder\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi9/ubi",
+            "datasourceTemplate": "docker"
+        },
+        {
+            "customType": "regex",
+            "managerFilePatterns": [
+                "/^Dockerfile\\.assisted-service.*$/"
+            ],
+            "matchStrings": [
+                "FROM registry.access.redhat.com/ubi9/ubi-minimal:(?<currentValue>[^@]+)@(?<currentDigest>sha256:[a-f0-9]+)\\n"
+            ],
+            "depNameTemplate": "registry.access.redhat.com/ubi9/ubi-minimal",
+            "datasourceTemplate": "docker"
         }
     ],
     "packageRules": [
@@ -141,6 +163,29 @@
             "matchManagers": [
                 "tekton"
             ]
+        },
+        {
+            "matchPackageNames": [
+                "registry.access.redhat.com/ubi9/ubi",
+                "registry.access.redhat.com/ubi9/ubi-minimal"
+            ],
+            "groupName": "UBI Runtime Images",
+            "addLabels": [
+                "ubi"
+            ]
+        },
+        {
+            "matchUpdateTypes": [
+                "major"
+            ],
+            "matchDatasources": [
+                "docker"
+            ],
+            "matchPackageNames": [
+                "registry.access.redhat.com/ubi9/ubi",
+                "registry.access.redhat.com/ubi9/ubi-minimal"
+            ],
+            "enabled": false
         }
     ]
 }
