NO-ISSUE: [master] Bump OCP versions: 4.16, 4.14, 4.21

--- a/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
+++ b/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
@@ -190,17 +190,17 @@ spec:
     version: 9.6.20251023-0
   - cpuArchitecture: x86_64
     openshiftVersion: '4.21'
-    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/4.21.0-ec.3/rhcos-4.21.0-ec.3-x86_64-live-iso.x86_64.iso
-    version: 9.6.20251023-0
+    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.21/4.21.0/rhcos-4.21.0-x86_64-live-iso.x86_64.iso
+    version: 9.6.20251212-1
   - cpuArchitecture: arm64
     openshiftVersion: '4.21'
-    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.21.0-ec.3/rhcos-4.21.0-ec.3-aarch64-live-iso.aarch64.iso
-    version: 9.6.20251023-0
+    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.21/4.21.0/rhcos-4.21.0-aarch64-live-iso.aarch64.iso
+    version: 9.6.20251212-1
   - cpuArchitecture: ppc64le
     openshiftVersion: '4.21'
-    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.21.0-ec.3/rhcos-4.21.0-ec.3-ppc64le-live-iso.ppc64le.iso
-    version: 9.6.20251023-0
+    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.21/4.21.0/rhcos-4.21.0-ppc64le-live-iso.ppc64le.iso
+    version: 9.6.20251212-1
   - cpuArchitecture: s390x
     openshiftVersion: '4.21'
-    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.21.0-ec.3/rhcos-4.21.0-ec.3-s390x-live-iso.s390x.iso
-    version: 9.6.20251023-0
+    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.21/4.21.0/rhcos-4.21.0-s390x-live-iso.s390x.iso
+    version: 9.6.20251212-1
