MGMT-22889: Threat model finding: Missing logout endpoint and token revocation
Security improvements for session management:

- Add V2Logout API endpoint for explicit session termination
- Implement TokenBlacklist with dual-layer storage (cache + DB)
- Add token revocation tracking with SHA-256 hashed identifiers
- Add cleanup job for expired revocation records
- Add fail-closed behavior for blacklist lookups
- Add security documentation for token revocation design

Prevents session fixation and enables proper logout functionality
for authenticated users and service accounts.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ __pycache__/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Compiled test binaries
+*.test
+
 # Drop scorecard stuff
 deploy/olm-catalog/**/tests/**
 
