--- a/deploy/assisted-service.yaml
+++ b/deploy/assisted-service.yaml
@@ -75,6 +75,30 @@ spec:
                 secretKeyRef:
                   name: assisted-installer-rds
                   key: db.user
+            - name: DB_SSLMODE
+              valueFrom:
+                secretKeyRef:
+                  name: assisted-installer-rds
+                  key: db.sslmode
+                  optional: true
+            - name: DB_SSLROOTCERT
+              valueFrom:
+                secretKeyRef:
+                  name: assisted-installer-rds
+                  key: db.sslrootcert
+                  optional: true
+            - name: DB_SSLCERT
+              valueFrom:
+                secretKeyRef:
+                  name: assisted-installer-rds
+                  key: db.sslcert
+                  optional: true
+            - name: DB_SSLKEY
+              valueFrom:
+                secretKeyRef:
+                  name: assisted-installer-rds
+                  key: db.sslkey
+                  optional: true
             - name: OCM_SERVICE_CLIENT_ID
               valueFrom:
                 secretKeyRef:
