--- a/deploy/podman/configmap-disconnected.yml
+++ b/deploy/podman/configmap-disconnected.yml
@@ -11,6 +11,7 @@ data:
   DB_PASS: admin
   DB_PORT: "5432"
   DB_USER: admin
+  DB_SSLMODE: disable
   DEPLOY_TARGET: onprem
   DEPLOYMENT_TYPE: "Podman"
   DISK_ENCRYPTION_SUPPORT: "true"
