MGMT-22890: Threat model finding: No API rate limiting
Security improvements for API rate limiting:

- Add configurable rate limiter with per-endpoint categories
- Implement client identification (auth context, IP, proxy headers)
- Add trusted proxy validation to prevent header spoofing
- Add restrictive limits for auth endpoints (brute force protection)
- Add RFC 6585 compliant 429 responses with Retry-After headers
- Add Prometheus metrics for rate limit monitoring
- Add security documentation for rate limiting configuration

Protects against DoS attacks and brute force attempts by
limiting request rates per client identity.

--- a/deploy/assisted-service-configmap.yaml
+++ b/deploy/assisted-service-configmap.yaml
@@ -33,3 +33,4 @@ data:
   AMD_REQUIRE_GPU: REPLACE_AMD_REQUIRE_GPU
   TNA_CLUSTERS_SUPPORT: REPLACE_TNA_CLUSTERS_SUPPORT
   EVENT_RATE_LIMITS: ""
+  RATE_LIMIT_ENABLED: REPLACE_RATE_LIMIT_ENABLED
