MGMT-22891: Threat model finding: No account lockout mechanism
Security improvements for authentication:

- Add FailedAttemptTracker with atomic upsert operations
- Implement configurable lockout policy with exponential backoff
- Add per-username and per-IP lockout tracking
- Add trusted proxy validation for accurate client identification
- Add audit logging for lockout events
- Add fail-closed behavior for blacklist lookups
- Add security documentation for lockout design

Protects against brute force attacks with progressive lockouts
and prevents credential stuffing attacks.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ deploy/olm-catalog/**/tests/**
 
 reports
 **/junit_unit_test.xml
+
+# Go test binaries
+*.test
 # Files used for onprem testing
 coreos-installer
 livecd.iso
