MGMT-22894: Threat model finding: Deployment security hardening required
Security improvements for Kubernetes deployments:

- Add securityContext with runAsNonRoot, drop ALL capabilities
- Add seccompProfile: RuntimeDefault
- Disable hostNetwork, hostPID, hostIPC
- Disable privileged and allowPrivilegeEscalation
- Add resource limits and requests
- Add NetworkPolicy for assisted-service
- Document MinIO test infrastructure security trade-offs

Hardens deployment manifests following CIS Kubernetes
Benchmark and OpenShift security best practices.

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,6 +22,15 @@ spec:
       labels:
         control-plane: infrastructure-operator
     spec:
+      # Pod-level security context
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
+      # Host namespace restrictions
+      hostNetwork: false
+      hostPID: false
+      hostIPC: false
       containers:
       - command:
         - /assisted-service-operator
@@ -57,8 +66,13 @@ spec:
               fieldRef:
                 fieldPath: metadata.name
         securityContext:
+          privileged: false
           allowPrivilegeEscalation: false
+          runAsNonRoot: true
           readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+              - ALL
         livenessProbe:
           httpGet:
             path: /healthz
@@ -72,6 +86,9 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 10
         resources:
+          limits:
+            cpu: 500m
+            memory: 500Mi
           requests:
             cpu: 100m
             memory: 200Mi
