--- a/deploy/postgres/postgres-deployment.yaml
+++ b/deploy/postgres/postgres-deployment.yaml
@@ -13,10 +13,26 @@ spec:
       labels:
         app: postgres
     spec:
+      # Pod-level security context
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
+      # Host namespace restrictions
+      hostNetwork: false
+      hostPID: false
+      hostIPC: false
       containers:
         - name: postgres
           image: quay.io/sclorg/postgresql-13-c9s
           imagePullPolicy: "IfNotPresent"
+          securityContext:
+            privileged: false
+            allowPrivilegeEscalation: false
+            runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
           ports:
             - containerPort: 5432
           env:
@@ -40,6 +56,7 @@ spec:
               name: postgredb
           resources:
             limits:
+              cpu: 500m
               memory: 500Mi
             requests:
               cpu: 100m
