--- a/deploy/monitoring/grafana/assisted-installer-ocp-grafana.yaml
+++ b/deploy/monitoring/grafana/assisted-installer-ocp-grafana.yaml
@@ -21,12 +21,28 @@ spec:
       labels:
         app: grafana
     spec:
+      # Pod-level security context
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
+      # Host namespace restrictions
+      hostNetwork: false
+      hostPID: false
+      hostIPC: false
       containers:
       - args:
         - -config=/etc/grafana/grafana.ini
         image: quay.io/openshift/origin-grafana:latest
         imagePullPolicy: IfNotPresent
         name: grafana
+        securityContext:
+          privileged: false
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - ALL
         ports:
         - containerPort: 3001
           name: http
@@ -67,6 +83,13 @@ spec:
         image: quay.io/openshift/origin-oauth-proxy:4.18
         imagePullPolicy: IfNotPresent
         name: oauth-proxy
+        securityContext:
+          privileged: false
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - ALL
         ports:
         - containerPort: 3000
           name: web-proxy
