--- a/Dockerfile.assisted-service-debug
+++ b/Dockerfile.assisted-service-debug
@@ -4,7 +4,9 @@ RUN GOFLAGS=-mod=mod go install github.com/go-delve/delve/cmd/dlv@v1.21.2
 
 FROM registry.access.redhat.com/ubi9/ubi:latest@sha256:3816d303e75dec4da2d10eeb9e8651eef4393721598bea4690c607282635aa57 AS builder
 
-RUN dnf install -y gcc git nmstate-devel openssl-devel make && \
+# First update base packages to ensure glibc is in sync, then install development packages
+RUN dnf update -y glibc glibc-common && \
+    dnf install -y glibc-devel gcc git nmstate-devel openssl-devel make && \
     dnf clean all
 
 ENV GOROOT=/usr/lib/golang
